Fix navbar spacing error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,7 +61,8 @@ header {
 }
 
 .social-media i {
-    margin-left: 15px;
+    margin: 0 7.5px;
+    text-align: center;
     font-size: 3rem;
 }
 
@@ -315,8 +316,12 @@ a[href="/accounts/password/reset/"] {
     border-bottom: 3px solid #D3B04D;
 }
 
+.event h3 {
+    padding-left: 0!important;
+}
+
 .event-date {
-    width: 25%;
+    width: 30%;
     font-family: Montserrat;
     background-color: #002043;
 }
@@ -436,10 +441,6 @@ a[href="/accounts/password/reset/"] {
     .event-date {
         width: 40%;
     }
-
-    .event h3 {
-        padding-left: 0!important;
-    }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
@@ -447,7 +448,7 @@ a[href="/accounts/password/reset/"] {
     #homeNav a {
         margin: 0;
     }
-    
+
 }
 
 /* Large devices (desktops, 992px and up) */
